使用 Colaboratory 建立

--- a/0608.ipynb
+++ b/0608.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0608.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNRXHUdcgohfGkYybVN2BJm",
+      "authorship_tag": "ABX9TyMhOenZOe7XtgUOmIrQwQ4M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -884,34 +884,26 @@
     {
       "cell_type": "code",
       "source": [
-        "scores=[85,79,93]\n",
-        "a=['國文','數學','英文']\n",
-        "for i in range(len(scores)):\n",
-        "  for i in range(len(a)):\n",
-        "    print(a[i],'成績:',scores[i],'分')"
+        "c=['國文成績為:85分','數學成績為:79分','英文成績為:93分']\n",
+        "for i in range(len(c)):\n",
+        "  print(c[i],sep='')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RsPd_IW23lxU",
-        "outputId": "f0467ec7-e6f1-4a37-cdda-e30f7ffc3a80"
+        "outputId": "e381c1f4-91ff-439c-bba2-f61d3aca7ebf"
       },
-      "execution_count": 54,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "國文 成績: 85 分\n",
-            "數學 成績: 79 分\n",
-            "英文 成績: 93 分\n",
-            "國文 成績: 85 分\n",
-            "數學 成績: 79 分\n",
-            "英文 成績: 93 分\n",
-            "國文 成績: 85 分\n",
-            "數學 成績: 79 分\n",
-            "英文 成績: 93 分\n"
+            "國文成績為:85分\n",
+            "數學成績為:79分\n",
+            "英文成績為:93分\n"
           ]
         }
       ]
